# gaussian-process-flow-modeling

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml
data/: README.md  sample_observations.csv
docs/: method.md
examples/: reconstruct_from_sample.py
notebooks/: demo.ipynb
results/: gp_flow_model.joblib  metrics.json
scripts/: download_data.py  make_sample.py  simulate.py
src/flowgp/: __init__.py  advection.py  data.py  field.py  gp.py  metrics.py  persistence.py
tests/: test_flowgp.py
